[package]
name = "raven-oss-tools"
version = "0.1.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.17.8"
aws-config = { version = "1.1.9", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.21.0"
zeroize = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
home = "0.5.9"
async-trait = "0.1.79"
tokio = { version = "1", features = ["full", "test-util"] }
clap = { version = "4.5.7", features = ["derive"] }
log = "0.4.21"
