[package]
name = "raven-oss-tools"
version = "0.1.1-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.17.8"
aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.42.0"
zeroize = "1.8.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
time="0.3.36"
home = "0.5.9"
async-trait = "0.1.81"
tokio = { version = "1.39.1", features = ["full", "test-util"] }
clap = { version = "4.5.11", features = ["derive"] }